# press-to-talk

./: README.md  install-zapzap-patch.sh  install.sh  launch.sh  press-to-talk.desktop  press_to_talk.py  pyproject.toml  test_press_to_talk.py
zapzap-patch/zapzap/services/: VoiceTranscriptionService.py
zapzap-patch/zapzap/webengine/: WebView.py  voice_transcription.js
